<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">
    <EditText
    android:id="@+id/TournamentName"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:inputType="text"
    android:hint="@string/tournament_name"
    />
    <EditText
        android:id="@+id/OrganizerName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/organizer_name"
        />
    <EditText
        android:id="@+id/OrganizerEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/email"
        />
    <EditText
        android:id="@+id/OrganizerMobile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/organizer_mobile"
        />
    <EditText
        android:id="@+id/Sponsor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/sponsor"
        />
    <Spinner
        android:id="@+id/BallType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/ball_type">
    </Spinner>
    <EditText
        android:id="@+id/NoOfTeams"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/max_no_teams"
        />
    <EditText
        android:id="@+id/MaxOvers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/max_overs"
        />
    <EditText
        android:id="@+id/WinnerPrice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/winner_price"
        />
    <EditText
        android:id="@+id/RunnerPrice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/runner_price"
        />
    <EditText
        android:id="@+id/StartDate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="date"
        android:hint="@string/start_date"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/start_tournament"
        />

</LinearLayout>
