<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/sat"
    tools:context=".SelectTournaTypeActivityFragment">

    <TextView android:id="@+id/WelcomeText" android:text="@string/WelcomeToTheScorer" android:layout_width="wrap_content"
        android:layout_height="wrap_content" style="@style/ViewHeader"/>

    <TextView
        android:id="@+id/WelcomeTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/WelcomeTag"
        style="@style/WelcomeTag"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/WelcomeText"/>

    <Button
        android:id="@+id/buttonToClick"
        android:layout_below="@id/WelcomeTag"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_dp"
        android:text="ClickKaro"/>

    <LinearLayout android:id="@+id/TournaTypeLinearLayout"
        android:layout_below="@id/WelcomeTag"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:id="@+id/SelectTourna" android:text="@string/SelectTourna" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/WelcomeTag"
            style="@style/SelectTourna"
            android:layout_gravity="center_horizontal"/>

        <ListView
            android:id="@+id/SelectSports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true">

        </ListView>
    </LinearLayout>
</RelativeLayout>